The overlay for bone ik limits has visual artifacts #77803

Closed
opened 2020-06-12 16:30:47 +02:00 by Ramón Grill · 15 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: 2.82.7

Short description of error
The sphere that is drawn in the 3D viewport after you select a bone with ik limits has visual artifacts. As far as I can tell, this always happens and requires no special reproduction steps besides creating an armature bone with ik limits enabled under the 'Bone Properties' panel.
Out of curiosity, I took a look at the code. The cause appears to be, that the shader, which is used to the draw the lines of the ik limit overlay, is also used for drawing the sphere. The shader (armature_wire_frag.glsl) does antialiasing for lines, which causes artifacts when it is used for not-lines.
image.png

Exact steps for others to reproduce the error
Create an armature with at least 2 bones. Then select a bone and enable ik limits on the x and z axis.
ik_overlay_bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: 2.82.7 **Short description of error** The sphere that is drawn in the 3D viewport after you select a bone with ik limits has visual artifacts. As far as I can tell, this always happens and requires no special reproduction steps besides creating an armature bone with ik limits enabled under the 'Bone Properties' panel. Out of curiosity, I took a look at the code. The cause appears to be, that the shader, which is used to the draw the lines of the ik limit overlay, is also used for drawing the sphere. The shader (armature_wire_frag.glsl) does antialiasing for lines, which causes artifacts when it is used for not-lines. ![image.png](https://archive.blender.org/developer/F8622365/image.png) **Exact steps for others to reproduce the error** Create an armature with at least 2 bones. Then select a bone and enable ik limits on the x and z axis. [ik_overlay_bug.blend](https://archive.blender.org/developer/F8611588/ik_overlay_bug.blend)
Author

Added subscriber: @ramon_grill

Added subscriber: @ramon_grill

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Seems like it draws into the lineTex buffer with alpha 0.
lineTex.png
lineTex.jpg

It does draw the solids to the linesTex and colorTex. and afterwards the outline is drawn on top. When drawing the solids it should not effect the lineTex.

Seems like it draws into the lineTex buffer with alpha 0. ![lineTex.png](https://archive.blender.org/developer/F8624378/lineTex.png) ![lineTex.jpg](https://archive.blender.org/developer/F8624387/lineTex.jpg) It does draw the solids to the linesTex and colorTex. and afterwards the outline is drawn on top. When drawing the solids it should not effect the lineTex.

This issue was referenced by 17ddb4c4ea

This issue was referenced by 17ddb4c4ea0f68a7f4c38f54291ec641deb6f1f9

This issue was referenced by e54058b121

This issue was referenced by e54058b1212202f5386ab53336e32ed01c441126
Jeroen Bakker self-assigned this 2020-06-16 10:20:41 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

I retested this on the latest daily build and the sphere is now invisible. It does obscure other overlays, so something is being rendered.
Annotation 2020-06-19 191348.png

version: 2.90.0 Alpha, branch: master, commit date: 2020-06-19 13:42, hash: 59b523c3c9, type: Release
build date: 2020-06-19, 12:31:39

I retested this on the latest daily build and the sphere is now invisible. It does obscure other overlays, so *something* is being rendered. ![Annotation 2020-06-19 191348.png](https://archive.blender.org/developer/F8632330/Annotation_2020-06-19_191348.png) version: 2.90.0 Alpha, branch: master, commit date: 2020-06-19 13:42, hash: 59b523c3c98e, type: Release build date: 2020-06-19, 12:31:39

Added subscriber: @fclem

Added subscriber: @fclem

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

@Jeroen-Bakker you need to make sure the shader still writes to the lineTex buffer. Otherwise it's Undefined behavior. I overlooked that in the patch.

@Jeroen-Bakker you need to make sure the shader still writes to the lineTex buffer. Otherwise it's Undefined behavior. I overlooked that in the patch.

This issue was referenced by e553408bee

This issue was referenced by e553408bee693d7cbff1b359af330f4963d2db12

This issue was referenced by 0aa7c11788

This issue was referenced by 0aa7c1178851cce79202e007bfab017ff0be5eab
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77803
No description provided.