source/blender/draw/engines/overlay/shaders/armature_dof_solid_frag.glsl
@@ -1,0 +1,11 @@
+
+flat in vec4 finalColor;
+
+layout(location = 0) out vec4 fragColor;
+layout(location = 1) out vec4 lineOutput;
+
+void main()
+{
+  fragColor = finalColor;
+  lineOutput = vec4(0.0);
+}
